# keyboarder-rs

./: .gitignore  Cargo.toml  README.md
examples/: client.rs  keyboard.rs  keycode.rs  listen.rs  map_client.rs  map_server.rs  serialize.rs  server.rs  simulate.rs  simulate_server.rs  webclient.rs  webserver.rs
src/: action.rs  action_dispatcher.rs  common.rs  connection.rs  event.rs  event_handler.rs  keyboard.rs  keycodes.rs  keysyms.rs  lib.rs  main.rs  queue.rs  simulate.rs  types.rs  utils.rs
src/ffi/: mod.rs  xkb.rs
src/linux/: keycodes.rs
src/platform_impl/: mod.rs
src/platform_impl/windows/: common.rs  connection.rs  keyboard.rs  keycodes.rs  listen.rs  mod.rs  simulator.rs
src/platform_impl/x11/: connection.rs  keyboard.rs  keycodes.rs  mod.rs  simulator.rs
src/x11/: common.rs  connection.rs  keyboard.rs  keycodes.rs  mod.rs  simulator.rs
src/x11/ffi/: mod.rs  xkb.rs
tests/: test_char.rs  test_control_key.rs  test_dead_key.rs  test_deadkey.rs  test_keyboard.rs  test_keysyms.rs  test_modifiers.rs  test_shortcut.rs  test_simulator.rs
