[package]
edition = "2021"
name = "keyboarder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
env_logger = "0.10.0"
keyberon = "0.1.1"
lazy_static = "1.4"
log = "0.4.17"
nix = "0.26.1"
rdev = {git = "https://github.com/fufesou/rdev"}
tfc = {git = "https://github.com/fufesou/The-Fat-Controller"}
x11 = {git = "https://github.com/bjornsnoen/x11-rs", features = ["xlib"]}
