[package]
edition = "2021"
name = "keyboarder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bincode = "1.3.3"
bitflags = "1.3"
chrono = "0.4.23"
crossbeam = "0.8.2"
env_logger = "0.10.0"
filedescriptor = "0.8.2"
lazy_static = "1.4"
libc = "0.2"
log = "0.4.17"
nix = "0.26.1"
serde = {version = "1.0", features = ["rc", "derive"]}
strum = "0.24"
strum_macros = "0.24"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
curl = "0.4.44"

mio = {version = "0.8", features = ["os-ext"]}
rdev = {git = "https://github.com/fufesou/rdev"}
tfc = {git = "https://github.com/fufesou/The-Fat-Controller"}
x11 = {version = "2.19", features = ["xlib_xcb", "xlib"]}
xcb = {version = "1.2", features = ["render", "randr", "dri2", "xkb", "xlib_xcb", "present", "xtest"]}
xkbcommon = {version = "0.5.0", features = ["x11", "wayland"]}

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-derive = "1.0.3" # Optional. Only if the derive macro is used.
native-windows-gui = "1.0.12" 
winapi = {version = "0.3", features = ["winuser", "errhandlingapi", "processthreadsapi"]}
